Giraph Change Log

Release 1.1.0 - unreleased
  GIRAPH-929: setIfUnset for EnumConfOption (pavanka)  

  GIRAPH-912: Support succinct representation of messages in messagestores (pavanka)

  GIRAPH-903: Detect crashes of Netty threads (edunov via pavanka)

  GIRAPH-925: Unit tests should pass even if zookeeper port not available (edunov via pavanka)

  GIRAPH-713: Provide an option to do request compression (pavanka)

  GIRAPH-923: Upgrade Netty version to a latest stable one (pavanka)

  GIRAPH-916: Wrong number of vertices stored reported to command line (majakabiljo)

  GIRAPH-919: Add worker to worker communication (majakabiljo)

  GIRAPH-922: SimpleEdgeStore has a bug causing NPE (pavanka)

  GIRAPH-915: With BigDataIO some messages can get ignored (majakabiljo via pavanka)

  GIRAPH-918: GIRAPH-908 has a small bug reg counting entries (pavanka)

  GIRAPH-842: option to dump histogram of memory usage when heap is low on memory (pavanka)

  GIRAPH-904: Giraph can hang when hostnames include uppercase letters (netj via pavanka)

  GIRAPH-900: Remove timers for compute method (majakabiljo via pavanka)

  GIRAPH-894: make giraphconfiguration available to workercontext (pavanka)

  GIRAPH-910: removing unnecessary boxing in some places in giraph-core (pavanka)  

  GIRAPH-908: support for partitioned input in giraph (pavanka)

  GIRAPH-907: refactor giraph code to support multiple implementations of vertexId data (pavanka)  

  GIRAPH-899: Remove hcatalog from hadoop_facebook profile (pavanka)

  GIRAPH-873: Specialized edge stores (pavanka)
 
  GIRAPH-898: Remove giraph-accumulo from Facebook profile (edunov via majakabiljo)

  GIRAPH-896: Fix memory leak in SuperstepMetricsRegistry (edunov via pavanka)  

  GIRAPH-897: Add an option to dump only live objects to JMap (edunov via pavanka)  

  GIRAPH-895: Trim the edges in Giraph (edunov via pavanka)

  GIRAPH-889: Update Yourkit Profiler (yhdong via pavanka)
