@@ -1,6 +1,8 @@
 Giraph Change Log
 
 Release 1.1.0 - unreleased
+  GIRAPH-921: Create ByteValueVertex to store vertex values as bytes without object instance (akyrola via majakabiljo)
+
   GIRAPH-929: setIfUnset for EnumConfOption (pavanka)  
 
   GIRAPH-912: Support succinct representation of messages in messagestores (pavanka)
